# Pipal

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Rakefile
cmake/: PipalConfig.cmake.in  PipalEigen3.cmake  PipalGTest.cmake  PipalVersion.cmake
docs/: _acceptance_8hh.html  _acceptance_8hh.js  _acceptance_8hh__dep__incl.map  _acceptance_8hh__dep__incl.md5  _acceptance_8hh__incl.map  _acceptance_8hh__incl.md5  _acceptance_8hh_source.html  _counter_8hh.html  _counter_8hh.js  _counter_8hh__dep__incl.map  _counter_8hh__dep__incl.md5  _counter_8hh__incl.map  _counter_8hh__incl.md5  _counter_8hh_source.html  _direction_8hh.html  _direction_8hh.js  _direction_8hh__dep__incl.map  _direction_8hh__dep__incl.md5  _direction_8hh__incl.map  _direction_8hh__incl.md5  _direction_8hh_source.html  _input_8hh.html  _input_8hh.js  _input_8hh__dep__incl.map  _input_8hh__dep__incl.md5  _input_8hh__incl.map  _input_8hh__incl.md5  _input_8hh_source.html  _iterate_8hh.html  _iterate_8hh.js  _iterate_8hh__dep__incl.map  _iterate_8hh__dep__incl.md5  _iterate_8hh__incl.map  _iterate_8hh__incl.md5  _iterate_8hh_source.html  _mainpage_8md.html  _output_8hh.html  _output_8hh.js  _output_8hh__dep__incl.map  _output_8hh__dep__incl.md5  (+149 more)
docs/include/doxygen-custom/: header.html
docs/markdown/: Mainpage.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_1.js  (+59 more)
include/: Pipal.hh
include/Pipal/: Acceptance.hh  Counter.hh  Defines.hh  Direction.hh  Input.hh  Iterate.hh  Iterate.hxx  Optimize.hxx  Output.hh  Parameter.hh  Problem.hh  Solver.hh  Solver.hxx  Types.hh  Types.hxx
tests/: CMakeLists.txt  test_1.cc  test_basic.cc  test_linear.cc  test_rosenbrock_box.cc  test_rosenbrock_suzuki.cc
